--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,17 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Gallery Demo
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <ion-item *ngFor="let file of items">
+      <img [src]="file.downloadUrl |async " style="width:100%;height:100%"/>
+    </ion-item>
 </ion-content>
+
+<ion-footer>
+  <button ion-button full tappable (click)="takeAnother()">Take Picture!</button>
+</ion-footer>
